added second method

--- a/project.ipynb
+++ b/project.ipynb
@@ -322,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: joblib in c:\\users\\anis\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.3.2)"
+      "Requirement already satisfied: joblib in c:\\users\\anis\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.3.2)\n"
      ]
     },
     {
@@ -332,13 +332,6 @@
       "\n",
       "[notice] A new release of pip is available: 23.3.1 -> 24.3.1\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -355,7 +348,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BM25 Average MSE for first 5000 entries: 1.58\n"
+      "BM25 Average MSE for first 100 entries: 1.58\n"
      ]
     }
    ],
@@ -385,7 +378,7 @@
     "\n",
     "# Evaluate the BM25 model on the first 5000 entries\n",
     "bm25_mse = evaluate_bm25_parallel(sample_indexes)\n",
-    "print(f'BM25 Average MSE for first 5000 entries: {bm25_mse}')\n"
+    "print(f'BM25 Average MSE for first 100 entries: {bm25_mse}')\n"
    ]
   },
   {
@@ -576,19 +569,19 @@
    "source": [
     "### 3.4 Evaluating the Hybrid Model\n",
     "\n",
-    "We'll evaluate the hybrid model on the first 5000 entries and compare its Mean Squared Error (MSE) with that of BM25. This will help us assess if our modifications improve the recommendation accuracy.\n"
+    "We'll evaluate the hybrid model on the first 100 entries and compare its Mean Squared Error (MSE) with that of BM25. This will help us assess if our modifications improve the recommendation accuracy.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hybrid Model Average MSE for first 5000 entries: 1.48\n"
+      "Hybrid Model Average MSE for first 100 entries: 1.48\n"
      ]
     }
    ],
@@ -606,7 +599,226 @@
     "\n",
     "# Run evaluation with alpha set to 0.5 for equal weighting\n",
     "hybrid_mse = evaluate_hybrid_parallel(sample_indexes, alpha=0.2)\n",
-    "print(f'Hybrid Model Average MSE for first 5000 entries: {hybrid_mse}')\n"
+    "print(f'Hybrid Model Average MSE for first 100 entries: {hybrid_mse}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.5 Analyzing the Hybrid Model Results\n",
+    "\n",
+    "After running the hybrid model that combines BM25 with embedding similarity, we got an MSE of 1.48, compared to the BM25-only baseline of 1.58. This improvement likely comes from adding the embeddings, which help capture the meaning of reviews more effectively than BM25 alone.\n",
+    "\n",
+    "#### Why the Hybrid Model Performed Better\n",
+    "1. **Understanding Context**: Embeddings help pick up on the meaning of words, not just exact matches, so similar reviews are matched even if they use different words.\n",
+    "2. **Balancing Exact and Semantic Similarity**: By mixing BM25’s exact word matching with the semantic similarity from embeddings, we get a better overall match between reviews.\n",
+    "\n",
+    "Overall, it looks like adding embeddings was worth it, as it reduced our MSE and improved the model's ability to identify similar reviews.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 4. Trying Out Another Method: Word Mover's Distance (WMD)\n",
+    "\n",
+    "To keep exploring ways to improve the recommendation accuracy, we’re going to try out **Word Mover's Distance (WMD)**. WMD calculates the \"distance\" between two documents by finding the minimum \"cost\" to match words from one document to another based on their meaning.\n",
+    "\n",
+    "#### Why Try WMD?\n",
+    "WMD uses word embeddings to measure the distance between two documents, capturing both word similarity and structure. This can help it find closer matches between reviews.\n",
+    "\n",
+    "### 4.1 Setting Up Word Mover's Distance Using Preprocessed Reviews\n",
+    "\n",
+    "We'll calculate WMD using the preprocessed, tokenized reviews we already created. We’ll load a pre-trained Word2Vec model to measure the distance between reviews.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: gensim in c:\\users\\anis\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (4.3.3)\n",
+      "Requirement already satisfied: numpy<2.0,>=1.18.5 in c:\\users\\anis\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from gensim) (1.26.2)\n",
+      "Requirement already satisfied: scipy<1.14.0,>=1.7.0 in c:\\users\\anis\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from gensim) (1.11.4)\n",
+      "Requirement already satisfied: smart-open>=1.8.1 in c:\\users\\anis\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from gensim) (7.0.5)\n",
+      "Requirement already satisfied: wrapt in c:\\users\\anis\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from smart-open>=1.8.1->gensim) (1.14.1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.3.1 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting POT"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.3.1 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  Downloading POT-0.9.5-cp311-cp311-win_amd64.whl.metadata (35 kB)\n",
+      "Requirement already satisfied: numpy>=1.16 in c:\\users\\anis\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from POT) (1.26.2)\n",
+      "Requirement already satisfied: scipy>=1.6 in c:\\users\\anis\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from POT) (1.11.4)\n",
+      "Downloading POT-0.9.5-cp311-cp311-win_amd64.whl (348 kB)\n",
+      "   ---------------------------------------- 0.0/348.6 kB ? eta -:--:--\n",
+      "   -------------------------------- ------- 286.7/348.6 kB 8.9 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 348.6/348.6 kB 7.2 MB/s eta 0:00:00\n",
+      "Installing collected packages: POT\n",
+      "Successfully installed POT-0.9.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install gensim\n",
+    "!pip install POT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "from gensim.models import KeyedVectors\n",
+    "\n",
+    "# Load pre-trained Word2Vec model (for example purposes, using a smaller one)\n",
+    "model = KeyedVectors.load_word2vec_format('GoogleNews-vectors-negative300.bin.gz', binary=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 Implementing WMD for Recommendations\n",
+    "\n",
+    "Using WMD, we’ll find the most similar review to a given review by calculating the minimal \"distance\" in meaning between words in two reviews.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend_wmd_place(index):\n",
+    "    query_review = df.loc[index, 'processed_review']\n",
+    "    wmd_distances = []\n",
+    "    \n",
+    "    for candidate_index in df.index:\n",
+    "        if candidate_index != index:\n",
+    "            candidate_review = df.loc[candidate_index, 'processed_review']\n",
+    "            # Compute Word Mover's Distance\n",
+    "            wmd_distance = model.wmdistance(query_review, candidate_review)\n",
+    "            wmd_distances.append((candidate_index, wmd_distance))\n",
+    "    \n",
+    "    # Sort by WMD (lower distance is better) and return the best match\n",
+    "    most_similar_index = min(wmd_distances, key=lambda x: x[1])[0]\n",
+    "    return most_similar_index\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 Evaluating the WMD-Based Model\n",
+    "\n",
+    "We’ll evaluate the WMD model on the first 100 entries by calculating the Mean Squared Error (MSE) between the ratings of each place and the closest place found by WMD.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WMD Model Average MSE for first 100 entries: 1.18\n"
+     ]
+    }
+   ],
+   "source": [
+    "def evaluate_wmd_parallel(selected_indexes=None):\n",
+    "    if selected_indexes is None:\n",
+    "        selected_indexes = df.index[:100]  # Default to first 100 entries\n",
+    "    mse_scores = Parallel(n_jobs=2)(delayed(lambda idx: mean_squared_error(\n",
+    "        [df.loc[idx, 'Rating']],\n",
+    "        [df.loc[recommend_wmd_place(idx), 'Rating']]\n",
+    "    ))(index) for index in selected_indexes)\n",
+    "    # Calculate average MSE\n",
+    "    average_mse = np.mean(mse_scores)\n",
+    "    return average_mse\n",
+    "\n",
+    "# Run evaluation on the first 100 entries\n",
+    "wmd_mse = evaluate_wmd_parallel(sample_indexes)\n",
+    "print(f'WMD Model Average MSE for first 100 entries: {wmd_mse}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Comparing the Results of the Three Models\n",
+    "\n",
+    "After evaluating all three models on the first 100 entries of TripAdvisor hotel reviews, we observed the following Mean Squared Error (MSE) values:\n",
+    "\n",
+    "- **BM25 Baseline Model**: MSE = 1.58\n",
+    "- **Hybrid Model (BM25 + Embeddings)**: MSE = 1.48\n",
+    "- **Word Mover's Distance (WMD) Model**: MSE = 1.18\n",
+    "\n",
+    "#### How Each Model Works\n",
+    "\n",
+    "1. **BM25 Baseline Model**:\n",
+    "   - BM25 is a popular improvement on TF-IDF that calculates relevance based on term frequency (TF) within documents and inverse document frequency (IDF) across the corpus.\n",
+    "   - It also prefers shorter documents when two documents have similar TF-IDF scores.\n",
+    "   - In this project, BM25 finds similar reviews by prioritizing exact word matches and frequency within the reviews, making it effective for identifying hotels with similar feedback based on specific terms (e.g., \"clean rooms\" or \"friendly staff\"). However, it lacks an understanding of word meaning, so it might not pick up on context if the language varies.\n",
+    "\n",
+    "2. **Hybrid Model (BM25 + Embeddings)**:\n",
+    "   - This model combines BM25 scores with cosine similarity scores from Sentence-BERT embeddings, which provide vector-based representations that capture semantic relationships.\n",
+    "   - Embeddings capture more contextual meaning, helping the model match reviews that discuss similar ideas even if they use different words (e.g., \"very clean\" vs. \"spotless\").\n",
+    "   - The hybrid model uses a weighted average of BM25 and embedding similarity, controlled by the parameter `alpha` (set to 0.2 to emphasize embeddings more). \n",
+    "   - By blending BM25’s exact matching with embedding-based semantic similarity, the hybrid model improved the MSE to 1.48, showing it could capture a bit more context than BM25 alone.\n",
+    "\n",
+    "3. **Word Mover's Distance (WMD) Model**:\n",
+    "   - WMD calculates the “distance” between two documents by finding the minimal cumulative \"travel cost\" required to transform one document’s words into the other’s, using word embeddings.\n",
+    "   - WMD doesn’t just rely on matches or weighted averages—it measures the actual \"distance\" in meaning between words, enabling it to find reviews that express similar sentiments in different ways.\n",
+    "   - For hotel reviews, this means WMD can match reviews more effectively when similar experiences are described with varied language, helping it handle nuances in customer feedback.\n",
+    "\n",
+    "#### Why WMD Performed the Best\n",
+    "\n",
+    "WMD outperformed both BM25 and the hybrid model, achieving the lowest MSE of 1.18. This likely happened for several reasons:\n",
+    "\n",
+    "1. **Deeper Semantic Matching**: WMD can match reviews based on meaning rather than exact words. This means it can find reviews that are expressing similar feedback, even if the words used differ, which is useful for identifying hotels with similar guest experiences.\n",
+    "   \n",
+    "2. **Optimal Word Transport**: WMD calculates the minimum \"cost\" to match words between two reviews, capturing subtle similarities in word usage that BM25 and the hybrid model might miss.\n",
+    "\n",
+    "3. **Context-Aware Matching**: Unlike BM25, which is limited to exact word matches, and the hybrid model, which uses a blend of similarity scores, WMD adapts fully to the context of each pair of reviews, making it more flexible and effective at finding meaningful connections in the hotel review dataset.\n",
+    "\n",
+    "Overall, WMD’s ability to handle language variations and capture deeper semantic similarities likely contributed to its better performance on TripAdvisor reviews.\n"
    ]
   }
  ],
